# TestJavascript

./: .gitignore  CMakeLists.txt
javascript/: javascript.cpp  javascript.h  js_duktape.cpp  js_duktape.h
src/: javascript_test.cpp  main.cpp
